@@ -25,8 +25,8 @@
  * @test
  * @bug 8291769 8301858 8304694 8304883
  * @summary Verify more complex switches work properly
- * @compile --enable-preview -source ${jdk.version} DeconstructionDesugaring.java
- * @run main/othervm --enable-preview DeconstructionDesugaring
+ * @compile DeconstructionDesugaring.java
+ * @run main DeconstructionDesugaring
  */
 
 import java.util.Objects;
@@ -79,7 +79,7 @@ public class DeconstructionDesugaring {
 
     private int runCheckStatement(Object o) {
         switch (o) {
-            case (((R1((((R2((((String s))))))))))) -> { return 1; }
+            case R1(R2(String s)) -> { return 1; }
             case R1(R2(Integer i)) -> { return 2; }
             case R1(R2(Double d)) -> { return 3; }
             case R1(R2(CharSequence cs)) -> { return 4; }
@@ -93,7 +93,7 @@ public class DeconstructionDesugaring {
 
     private int runCheckExpression(Object o) {
         return switch (o) {
-            case (((R1((((R2((((String s))))))))))) -> 1;
+            case R1(R2(String s)) -> 1;
             case R1(R2(Integer i)) -> 2;
             case R1(R2(Double d)) -> 3;
             case R1(R2(CharSequence cs)) -> 4;
